emblem tooltip overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,6 @@
 	
 	.charEmblemImg, .charEmblemImg img
 	{
-		overflow: hidden;
 		position: relative;
 		width: calc(var(--columWidth) * var(--sizeMultiplier));
 	}
